# scutum

./: README.md  pyproject.toml  setup.py
scutum/: __init__.py  authorizable.py  exceptions.py  gate.py  policy.py  scope.py  types.py
scutum/ext/: fastapi.py  flask.py
thyros/: __init__.py  authorizable.py  gate.py  response.py
thyros/gate/: __init__.py  _gate.py
